# oscar_ros

./: CMakeLists.txt  package.xml
config/: apt_viz.rviz  costmap_common_params.yaml  ekf.yaml  local_planner_params.yaml  mapper_params_online_sync.yaml  odom_testing.rviz  robot_cfg.yaml
include/oscar_ros/: footprint.h
include/robo_car_if/: cals.h  footprint.h  go_to_point.h  pid.h
include/robo_car_ros_if/: cals.h  footprint.h  go_to_point.h
launch/: ekf.launch  ekf.yaml  localization.launch  mapping.launch  move_base.launch  odometry.launch  robot.launch  robot_cfg.yaml  robot_configuration.launch  rviz_nav.launch  simple_nav.launch  slam.launch  teleop.launch
maps/: apt_map.pgm  apt_map.yaml
msg/: cmd.msg  state.msg
src/: go_to_point.cpp  odometry.cpp  pid.cpp  pose_estimation.cpp  robo_car_if.cpp  rviz_nav.cpp  simple_nav.cpp  slam.cpp  teleop.cpp  velocity_cmd.cpp
src/launch/: ekf.launch  ekf.yaml  localization.launch  simple_nav.launch  teleop.launch
